--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "mobx": "^6.5.0",
+    "mobx-persist-store": "^1.0.6",
+    "mobx-react-lite": "^3.3.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
